# pyopengl

./: .bzrignore  .gitignore  .travis.yml  MANIFEST.in  README.txt  acquireoriginal.py  appveyor.yml  build-manylinux.sh  download_appveyor.sh  dumbmarkup.py  dumbpydoc.py  generate.py  index.html  license.txt  metadata.py  model.py  modern.css  numpy-requirements.txt  oglctutorials.py  pyproject.toml  readme.rst  references.py  samples.py  setup.cfg  setup.py  setupaccel.py  sitestyle.css  spike.py  template.html  test-requirements.txt  tox.ini  tutorial.css  upload-pydoc.sh  upload.py  upload.sh
.github/workflows/: accelerate-manylinux.yml
OpenGL/: __init__.py  _bytes.py  acceleratesupport.py  constant.py  constants.py  contextdata.py  converters.py  error.py  extensions.py  images.py  khr.py  latebind.py  lazywrapper.py  logs.py  plugins.py  version.py  wrapper.py
OpenGL/DLLS/: GLE_WIN32_README.txt  freeglut_README.txt
OpenGL/EGL/: __init__.py  debug.py
OpenGL/GL/: __init__.py  exceptional.py  feedback.py  framebufferobjects.py  glget.py  images.py  pointers.py  selection.py  shaders.py
OpenGL/GLE/: __init__.py  exceptional.py
OpenGL/GLES2/: __init__.py  shaders.py
OpenGL/GLES3/: __init__.py
OpenGL/GLU/: __init__.py  glunurbs.py  glustruct.py  projection.py  quadrics.py  tess.py
OpenGL/GLUT/: __init__.py  fonts.py  freeglut.py  osx.py  special.py
OpenGL/GLX/: __init__.py
OpenGL/Tk/: __init__.py
OpenGL/WGL/: __init__.py
OpenGL/arrays/: __init__.py  _arrayconstants.py  _buffers.py  _numeric.py  _strings.py  arraydatatype.py  arrayhelpers.py  buffers.py  ctypesarrays.py  ctypesparameters.py  ctypespointers.py  formathandler.py  lists.py  nones.py  numarrays.py  numbers.py  numeric.py  numericnames.py  numpybuffers.py  numpymodule.py  strings.py  vbo.py
OpenGL/egl/: __init__.py  khr.py
OpenGL/es2/: __init__.py
OpenGL/es3/: __init__.py
OpenGL/platform/: __init__.py  baseplatform.py  ctypesloader.py  darwin.py  egl.py  eglplatform.py  entrypoint31.py  glx.py  osmesa.py  win32.py
OpenGL/raw/: GLX.py  WGL.py  _GLX.py  _GLX_ARB.py  _GLX_NV.py  _WGL.py  _WGL_ARB.py  _WGL_NV.py
OpenGL/tests/: __init__.py  test_glgetfloat_leak.py  testing_context.py
OpenGL_accelerate/: MANIFEST.in  __init__.py  formathandler.pxd  license.txt  setup.py  wrapper.pxd
OpenGL_accelerate/src/: _numarrayarrays.c  arraydatatype.c  arraydatatype.pyx  buffers_formathandler.c  buffers_formathandler.pyx  errorchecker.c  errorchecker.pyx  formathandler.c  formathandler.pyx  latebind.c  latebind.pyx  nones_formathandler.c  numpy_formathandler.c  numpy_formathandler.pyx  vbo.c  vbo.pyx  wrapper.c  wrapper.pyx
OpenGL_accelerate/tests/: test_arraydatatypeaccel.py  test_numpyaccel.py
accelerate/: MANIFEST.in  README.md  README.txt  _build-manylinux.sh  dev-requirements.txt  license.txt  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
accelerate/OpenGL_accelerate/: __init__.py  formathandler.pxd  wrapper.pxd
accelerate/src/: arraydatatype.c  arraydatatype.pyx  buffers_formathandler.c  buffers_formathandler.pyx  errorchecker.c  errorchecker.pyx  formathandler.c  formathandler.pyx  latebind.c  latebind.pyx  nones_formathandler.c  nones_formathandler.pyx  numpy_formathandler.c  numpy_formathandler.pyx  vbo.c  vbo.pyx  wrapper.c  wrapper.pyx
accelerate/tests/: test_arraydatatypeaccel.py  test_numpyaccel.py
appveyor/: install.ps1  install_cached_package.py  rebuilddeps.txt
directdocs/: .gitignore  README.md  acquireoriginal.py  dumbmarkup.py  dumbpydoc.py  generate.py  model.py  oglctutorials.py  references.py  requirements.txt  samples.py  upload.sh
directdocs/output/: manpage.css  modern.css
directdocs/presentations/: yougotpythoninmyxml.odp
directdocs/templates/: index.kid  master.html  module.html  section.kid  tutorialindex.kid
documentation/: buildepydoc.py  ctypes-presentation-outline.odt  ctypes-presentation-pycon.odp  ctypes-presentation.odp  deprecations.html  development.html  index.html  installation-v2.html  installation.html  opengl-ctypes-intro.odp  opengl_diffs.html  py2exe.html  template.html  tutorial.css  using.html
output/: manpage.css  modern.css
pydoc/: manpage.css
scripts/: screenshots.js
src/: ChangeLog.sh  README.md  _arrays.c  arraydatatype.c  arraydatatype.pyx  buildgledll.bat  buildgledll.py  check_pollution.py  checkdefs.py  codegenerator.py  comparechromium.py  core.py  ctypes_codegenerator_refactor.diff  ctypetopytype.py  downloadglut.py  errorchecker.c  errorchecker.pyx  find_glget_constants.py  formathandler.c  formathandler.pyx  funcparse.py  generate_record_names.diff  generatecode.py  generateraw.py  gengl.py  get_gl_extensions.py  get_gles_extensions.py  gl_out_parameters.json  glgetsizes.csv  global_loading_on_linux.diff  missingdefs.py  missingglut.py  nones_formathandler.c  numpy_formathandler.c  numpy_formathandler.pyx  openglgenerator.py  print_base_array_types.py  py2exeeggs.py  togl.py  vbo.c  (+8 more)
templates/: index.kid  master.html  module.html  section.kid  tutorial.kid  tutorialindex.kid
tests/: basetestcase.py  check_crash_on_glutinit.py  check_egl_device_enumeration.py  check_egl_es1.py  check_egl_es2.py  check_egl_opengl.py  check_egl_platform_ext.py  check_egl_pygame.py  check_freeglut_deinit.py  check_gles_imports.py  check_glut_debug.py  check_glut_fc.py  check_glut_load.py  check_glutinit.py  check_glutinit_0args.py  check_glutinit_simplest.py  check_glutinit_single.py  check_glutwindow.py  check_glx.py  check_import_err.py  check_init_framebufferarb.py  check_leak_on_discontiguous_array.py  check_silence_numpy_warning.py  check_xlib_egl.py  checkinitframebufferarb.py  deprecations.py  egl_ext_enumerate.py  egltest.py  feedbackvarying.py  geomshader.py  gh_bug32.py  gh_bug33_osmesa_attribute_pointer.py  gh_bug6_check.py  glsl_version.py  importtests.py  os_egl.py  osdemo.py  performance.py  pygamegltest.py  test_accel_leak.py  (+47 more)
tools/: doc_samplemerge.py  example_references.py  find_doc.py  refs.txt
tutorials/: shader_1.xhtml  shader_2.xhtml  shader_3.xhtml  tutorial.css
(+4315 files in other folders)
