[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "PyOpenGL"
description = "Standard OpenGL bindings for Python"
authors = [ { name = "Mike C. Fletcher", email = "mcfletch@vrplumber.com" } ]
urls.homepage = "http://pyopengl.sourceforge.net"
license = { text = "BSD" }
readme = "readme.rst"
keywords = [
    "Graphics",
    "3D",
    "OpenGL",
    "GLU",
    "GLUT",
    "GLE",
    "GLX",
    "EXT",
    "ARB",
    "Mesa",
    "ctypes",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

dynamic = [ "version" ]

[tool.setuptools.packages]
find = { include = [ "OpenGL*" ], namespaces = false }

[tool.setuptools.dynamic]
version = { attr = "OpenGL.version.__version__" }
