[metadata]
name = PyOpenGL
version = attr: OpenGL.version.__version__
description = Standard OpenGL bindings for Python
author = Mike C. Fletcher
author_email = mcfletch@vrplumber.com
url = http://pyopengl.sourceforge.net
download_url = https://pypi.org/project/PyOpenGL/
license = BSD
long_description = file: readme.rst
long_description_content_type = text/x-rst
keywords = Graphics, 3D, OpenGL, GLU, GLUT, GLE, GLX, EXT, ARB, Mesa, ctypes
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers

[options]
packages = find:

[options.packages.find]
include = OpenGL*
