[metadata]
name = PyOpenGL-accelerate
version = attr: OpenGL_accelerate.__init__.__version__
description = Acceleration code for PyOpenGL
author = Mike C. Fletcher
author_email = mcfletch@vrplumber.com
url = http://pyopengl.sourceforge.net
download_url = http://sourceforge.net/project/showfiles.php?group_id=5988
license = BSD
long_description = file: README.txt
long_description_content_type = text/plain
keywords = PyOpenGL, accelerate, Cython
platforms = Win32, Linux, OS-X, Posix
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: C
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Intended Audience :: Developers

[options]
packages = OpenGL_accelerate
